fixed jumping transition of top navigation

--- a/assets/_css-src/_page_elements.sass
+++ b/assets/_css-src/_page_elements.sass
@@ -74,7 +74,7 @@ body > header
     .nav
       position: absolute
       z-index: 999
-      margin-top: -1.65em
+      top: 35%
       right: -.5em
       height: 2.25em
       overflow: hidden
